--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     </div>
     <div class="container1">
         <div class="letter1" id="letter11">Chúc</div>
-        <div class="letter1" id="letter12">sĩ</div>
-        <div class="letter1" id="letter13">tử</div>
-        <div class="letter1" id="letter14">dễ</div>
-        <div class="letter1" id="letter15">thương</div>
-        <div class="letter1" id="letter16">nhất</div>
-        <div class="letter1" id="letter17">quả</div>
-        <div class="letter1" id="letter18">đất</div>
+        <div class="letter1" id="letter12">các</div>
+        <div class="letter1" id="letter13">sĩ</div>
+        <div class="letter1" id="letter14">tử</div>
+        <div class="letter1" id="letter15">thi</div>
+        <div class="letter1" id="letter16">tốt</div>
+        <div class="letter1" id="letter17">và</div>
+        //<div class="letter1" id="letter18">đất</div>
         <div class="letter1" id="letter19">của</div>
-        <div class="letter1" id="letter20">anh</div>
+        <div class="letter1" id="letter20">anh</div>//
     </div> 
     <div class="container2">
         <div class="letter1" id="letter22">thành</div>
