--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="letter1" id="letter15">thi</div>
         <div class="letter1" id="letter16">tốt</div>
         <div class="letter1" id="letter17">và</div>
-        //<div class="letter1" id="letter18">đất</div>
+        <!--<div class="letter1" id="letter18">đất</div>
         <div class="letter1" id="letter19">của</div>
-        <div class="letter1" id="letter20">anh</div>//
+        <div class="letter1" id="letter20">anh</div>-->
     </div> 
     <div class="container2">
         <div class="letter1" id="letter22">thành</div>
