--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="letter1" id="letter27">này</div>
         <div class="letter1" id="letter28">nhé!</div>
         <div class="letter1" id="letter29">Chúc</div>
-        <!--<div class="letter1" id="letter30">em</div>-->
+        <!--<div class="letter1" id="letter30">em</div>--->
         <div class="letter1" id="letter31">may</div>
         <div class="letter1" id="letter32">mắn!</div>
     </div> 
