--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="container1">
         <div class="letter1" id="letter11">Chúc</div>
-        <div class="letter1" id="letter12">các</div>
+        <!--<div class="letter1" id="letter12">các</div>-->
         <div class="letter1" id="letter13">sĩ</div>
         <div class="letter1" id="letter14">tử</div>
         <div class="letter1" id="letter15">thi</div>
